# Ward

./: .gitignore  BENCHMARK.md  Cargo.toml  Dockerfile  PERFORMANCE_TESTING.md  README.md  dependency-reduced-pom.xml  pom.xml
.github/workflows/: docker-image.yml  rust.yml  stale.yml  test-build-jar.yml
.vercel/: project.json
src/: main.rs  system.rs
src/main/java/dev/leons/ward/: Ward.java
src/main/java/dev/leons/ward/components/: ServletComponent.java  UtilitiesComponent.java
src/main/java/dev/leons/ward/configurations/: BeanConfiguration.java  ThymeleafConfiguration.java
src/main/java/dev/leons/ward/controllers/: ErrorController.java  IndexController.java  InfoController.java  PerformanceController.java  SetupController.java  UptimeController.java  UsageController.java
src/main/java/dev/leons/ward/dto/: InfoDto.java  MachineDto.java  ProcessorDto.java  SetupDto.java  StorageDto.java  UptimeDto.java  UsageDto.java
src/main/resources/: application.properties  application.yml
src/main/resources/static/css/: layout.css
src/main/resources/static/js/: chart.js  setup.js
src/main/resources/static/js/assets/: dhtmlx.min.js
src/main/resources/templates/: index.html  setup.html
src/test/java/dev/leons/ward/: TestConfig.java  WardTest.java
templates/: setup.html
ward-rs/: Cargo.toml  Dockerfile  MIGRATION_GUIDE.md  convert.py
ward-rs/assets/css/: dimensions.css
ward-rs/assets/js/: setup.js
ward-rs/src/: config.rs  main.rs  models.rs  system.rs  tests.rs
ward-rs/templates/: index.html  setup.html
(+14 files in other folders)
